examples/compile-errors/testbadtype.kal
extern foo() -> int;
extern bar(x:double) -> double;

def baz()
    bar(foo());  # expected failure
